# SixDegreesOfFreedom

./: .gitignore  MANIFEST.in  README.md  XBSPF_Analysis.ipynb  XBSPF_Analysis_demo0.ipynb  XBSPF_Analysis_demo2.ipynb  XG_analysis_demo.ipynb  XG_analysis_demo0.ipynb  XG_analysis_demo1.ipynb  XG_analysis_pedropaplovsk.ipynb  XROMY_analysis_demo.ipynb  XROMY_analysis_demo1.ipynb  XROMY_analysis_pedropaplovsk.ipynb  XROMY_analysis_pedropaplovsk_eigenmodes.ipynb  XROMY_analysis_pedropaplovsk_eigenmodes_data.ipynb  XROMY_analysis_turkyie.ipynb  XROMY_velocity_check.ipynb  __init__.py  debug_frequency_plot.py  environment.yml  fetch_data_Gring.ipynb  pyproject.toml  setup.py  sixdegrees.py  sixdegrees.py.20250709  sixdegrees.py.bck  utils.py  utils.py.20250704
.github/workflows/: publish.yml
OLD/: XROMY_analysis_test.ipynb  XROMY_spectra.ipynb  __init__.py  sixdegrees.py.20250703  sixdegrees.py.20250825  sixdegrees2.py  sixdegrees_bck.py  sixdegrees_class.ipynb  utils.py  utils.py.20250805
OLD/notebooks/: XROMY_analysis_demo0.ipynb  fetch_data_Gring.ipynb
OLD/scripts/: fetch_data_ROMY.ipynb
config/: config_G_M7.0_20241205.yaml
data/: eventM21_6c.mseed  eventM29_6c.mseed  eventM35_6c.mseed  eventM43_6c.mseed  eventM44_6c.mseed  romy_eventM6.0.mseed  selection_0_6c.mseed  selection_1_6c.mseed  selection_4_6c.mseed  selection_5_6c.mseed  selection_6_6c.mseed
docs/: environment.yml  environment_old.yml
event_configs/: M35_20250215.pkl  M39_20250320.pkl  M41_20221231.pkl  M41_20250414.pkl  M52_20250414.pkl  M62_20221122.pkl  romy_M58_20250602.yml  romy_M60_20250513.pkl  romy_M68_20230908.pkl
examples/: DEV_XROMY_analysis_demo1.ipynb  USAGE_dispersion_curves.md  XBSPF_Analysis_demo0.ipynb  XBSPF_Analysis_demo1.ipynb  XBSPF_Analysis_demo2.ipynb  XBSPF_Analysis_demo3.ipynb  XBSPF_Analysis_tests.ipynb  XBSPF_analysis_demo1.ipynb  XBSPF_analysis_demo2.ipynb  XG_analysis_demo0.ipynb  XG_analysis_demo1.ipynb  XGring_analysis_demo0.ipynb  XGring_analysis_demo1.ipynb  XROMY_analysis_backazimuths.ipynb  XROMY_analysis_demo0.ipynb  XROMY_analysis_demo1.ipynb  XROMY_analysis_demo2.ipynb  XROMY_analysis_japan.ipynb  XROMY_animation_demo.ipynb  XROMY_animation_demo3.ipynb  XROMY_velocity_check.ipynb  adr_validation.ipynb  demo_3d_animation.py  dispersion_validation_demo.ipynb  fetch_data_BSPF.ipynb  fetch_data_Gring.ipynb  fetch_data_ROMY.ipynb  seismicarray_adr_demo.ipynb  seismicarray_basic_demo.ipynb  seismicarray_demo.ipynb
examples/config/: 20230908_M68.yml  20241201_M75.yml  20251201_M75.yml  20251207_M75.yml  20251208_M72.yml  20251208_M75.yml  20260222_M70.yml  20260309_M59.yml  20260420_M75.yml  (+14 more)
figures/: legend_entries.txt
functions/: compute_velocity_from_amplitude_ratio.py  makeplot_cwt_all.py  makeplot_velocities.py  makeplot_velocities_old.py
notebooks/: XG_analysis_demo.ipynb  XROMY_analysis_demo1.ipynb  XROMY_analysis_demo2.ipynb  XROMY_analysis_pedropaplovsk.ipynb  XROMY_hunga_tonga.ipynb
plots/: plot_cwt.py  plot_spectra_comparison_fill.py  plot_velocities.py  plot_waveform_cc.py
scripts/: G_data.ipynb  README.md  XBSPF_Analysis.ipynb  XBSPF_Analysis_demo.ipynb  XBSPF_Analysis_demo1.ipynb  XG_Analysis.ipynb  XROMY_Analysis.ipynb  XROMY_analysis_demo1.ipynb  XROMY_analysis_demo2.ipynb  environment.yml  sixdegrees.py
sixdegrees/: __init__.py  seismicarray.py  sixdegrees.py
sixdegrees.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_array_function.py  test_backazimuth_computations.ipynb
utils/: compute_adr_pfo.py  compute_beamforming_pfo.py  print_dict_tree.py
(+224 files in other folders)
