[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sixdegrees"
version = "0.1.0"
description = "A package for 6-DoF seismic data processing"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Andreas Brotzer",
    email = "rotzleffel@tutanota.com"
    },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "obspy>=1.3.0",
    "pandas>=1.3.0",
    "scikit-learn>=0.24.0",
    "requests>=2.25.0",
    "tqdm>=4.65.0",
    "typing-extensions>=4.5.0",
    "cartopy>=0.21.0",
    "acoustics>=0.2.3",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.25.0",
    "ipython>=8.11.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
    "notebook>=6.5.4",
]

[project.urls]
"Homepage" = "https://github.com/andbrocode/sixdegrees"  # Replace with actual repository URL
"Bug Tracker" = "https://github.com/andbrocode/sixdegrees/issues"  # Replace with actual issues URL

[tool.hatch.build.targets.wheel]
packages = ["sixdegrees"]

[tool.hatch.version]
path = "sixdegrees/__init__.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
