[build-system]
requires = ["setuptools>=64.0.0", "wheel", "pip>=22.1"]
build-backend = "setuptools.build_meta"

[project]
name = "sixdegrees"
version = "0.1.0"
description = "A package for 6-DoF seismic data processing"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Andreas Brotzer", email = "rotzleffel@tutanota.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "numpy>=1.20.0,<2.0.0",
    "scipy>=1.7.0,<2.0.0",
    "matplotlib>=3.4.0,<4.0.0",
    "obspy>=1.3.0,<2.0.0",
    "pandas>=1.3.0,<2.0.0",
    "scikit-learn>=0.24.0,<2.0.0",
    "requests>=2.25.0,<3.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "typing-extensions>=4.5.0,<5.0.0",
    "cartopy>=0.20.0,<0.21.0",
    "acoustics>=0.2.3",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.25.0",
    "ipython>=8.11.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
    "notebook>=6.5.4",
]

test = [
    "pytest>=6.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/andbrocode/sixdegrees"
"Bug Tracker" = "https://github.com/andbrocode/sixdegrees/issues"

[tool.setuptools.packages.find]
include = ["sixdegrees", "sixdegrees.*"]
exclude = ["OLD*", "tests*", "examples*", "docs*", "event_configs*"]

[tool.hatch.version]
path = "sixdegrees/__init__.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
